@@ -4,6 +4,11 @@
 Git 1.2.x
 ------------------------------------------------------------------------------------------------------------------------
 
+DATABASE
+	Fixed: Mysql IGNORE extension doesn't work with Fast Index Creation (MySQL Bug #40344)
+	Fixed: MySQL IGNORE extension is deprecated as of MySQL 5.6.17
+	Fixed: Possible duplicate entries when adding UNIQUE constraints
+
 ------------------------------------------------------------------------------------------------------------------------
 1.2.5
 ------------------------------------------------------------------------------------------------------------------------
